Revert "Fixed vertical align of texts in entries."
This reverts commit 36db881f4e3e7b10a66166b4ee264604358fc93b.

--- a/app/assets/stylesheets/partials/_entries.scss
+++ b/app/assets/stylesheets/partials/_entries.scss
@@ -52,7 +52,7 @@
       vertical-align: middle;
       padding: {
         top: 5px;
-        bottom: 8px;
+        bottom: 5px;
         left: 10px;
         right: 10px;
       }
@@ -113,7 +113,6 @@
     .entry-published {
       text-align: right;
       padding-right: 2px;
-      padding-top: 2px;
     }
 
     .entry-toolbar {
